--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "stayfuneral/ramapriya.telegram",
+  "name": "ramapriya-doom/ramapriya.telegram",
   "description": "Bitrix module for telegram usage",
   "minimum-stability": "stable",
   "type": "bitrix-d7-module",
