--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "ramapriya-doom/ramapriya.telegram",
   "description": "Bitrix module for telegram usage",
+  "version": "1.0.0",
   "minimum-stability": "stable",
   "type": "bitrix-d7-module",
   "authors": [
